add js and html validation screenshots

--- a/slackbook_user/templates/base/account-index.html
+++ b/slackbook_user/templates/base/account-index.html
@@ -1,63 +1,63 @@
 <div class="row justify-content-around">
     <div class="col-4 main-content">
 
+        <!-- Channels joined or hosted -->
         {% if user.is_authenticated %}
         <div>
-            <small>
-                <p class="channel-assignment">You joined/hosted:</p>
-            </small>
+            <p class="channel-assignment"><small>You joined/hosted:</small></p> 
         </div>
         {% for topic in channels %}
-            {% for comment in user.post_set.all %}
-            {% if comment.channel.title == topic.title %}
-            {% ifchanged topic_post %}
-            <div class="channel-content channel-scroll">
-                <h4><a href="{% url 'channel' topic.id %}">{{topic.title}}</a></h4>
-                {% if topic.host.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
-                <i class="far fa-user user-image default-user"></i>
-                {% else %}
-                <img class="user-image" src="{{ topic.host.avatar.url }}" alt="user-image">
-                {% endif %}
-                <a href="{% url 'account' topic.host.id %}">
-                    <h5>@{{topic.host.username}}</h5>
-                </a>
-                <br>
-                {% if request.user == topic.host %}
-                <a href="{% url 'delete-channel' topic.id %}">Delete</a>
-                <a href="{% url 'update-channel' topic.id %}">Edit</a>
-                {% endif %}
-                {% for comment in comments %}
-    
-                {% if comment.channel.title == topic.title %}
-                <div>
-                    <small><a href="{% url 'account' comment.user.id %}">@{{ comment.user.username }}</a> -
-                        {{ comment.created_on|timesince }} ago</small>
-                </div>
-                <div>
-                    <div class="channel-content">
-                        <h5>{{ comment.body }}</h5>
-                        {% if comment.image %}
-                        <img class="post-image" src="{{ comment.image.url }}" alt="post-image">
-                        {% endif %}                   
-                    </div>
-                </div>
-                <br>
-                {% endif %}
-                {% endfor  %}
-    
-                <a href="{% url 'member' topic.id %}"><i class="fas fa-user-friends"></i></a> {{ topic.guests.count }}
-                Members
-                <span class="category-open"><small>{{ topic.topic.title }}</small></span>
-            </div>
-            <hr>
-            {% endifchanged%}
+        {% for comment in user.post_set.all %}
+        {% if comment.channel.title == topic.title %}
+        {% ifchanged topic_post %}
+        <div class="channel-content channel-scroll">
+            <h4><a href="{% url 'channel' topic.id %}">{{topic.title}}</a></h4>
+            {% if topic.host.avatar.url == 'https://res.cloudinary.com/ddigiimwd/image/upload/v1/images/avatar.svg' %}
+            <i class="far fa-user user-image default-user"></i>
+            {% else %}
+            <img class="user-image" src="{{ topic.host.avatar.url }}" alt="user-image">
             {% endif %}
-            {% endfor %}
+            <a href="{% url 'account' topic.host.id %}">
+                <h5>@{{topic.host.username}}</h5>
+            </a>
+            <br>
+            {% if request.user == topic.host %}
+            <a href="{% url 'delete-channel' topic.id %}">Delete</a>
+            <a href="{% url 'update-channel' topic.id %}">Edit</a>
+            {% endif %}
+
+            {% for comment in comments %}
+            {% if comment.channel.title == topic.title %}
+            <div>
+                <small><a href="{% url 'account' comment.user.id %}">@{{ comment.user.username }}</a> -
+                    {{ comment.created_on|timesince }} ago</small>
+            </div>
+            <div>
+                <div class="channel-content">
+                    <h5>{{ comment.body }}</h5>
+                    {% if comment.image %}
+                    <img class="post-image" src="{{ comment.image.url }}" alt="post-image">
+                    {% endif %}
+                </div>
+            </div>
+            <br>
+            {% endif %}
+            {% endfor  %}
+            <a href="{% url 'member' topic.id %}"><i class="fas fa-user-friends"></i></a> {{ topic.guests.count }}
+            Members
+            <span class="category-open"><small>{{ topic.topic.title }}</small></span>
+        </div>
+        <hr>
+        {% endifchanged%}
+        {% endif %}
+        {% endfor %}
         {% endfor %}
 
+        <!-- If User is not registered -->
         {% else %}
         <div class="channel-content">
-            <h3>Your channels may be visible here. Please <a class="nav-link" href="{% url 'account_signup' %}">Sign Up!</a></h3>
+            <h3>Your channels may be visible here. Please <a class="nav-link" href="{% url 'account_signup' %}">Sign
+                    Up!</a></h3>
         </div>
         {% endif %}
     </div>
