--- a/slackbook_user/templates/base/user-settings.html
+++ b/slackbook_user/templates/base/user-settings.html
@@ -9,7 +9,7 @@
                     {% csrf_token %}
                     {% for field in user_form %}
                     <div>
-                        <label for="user-field">{{ field.label }}</label>
+                        <label>{{ field.label }}</label>
                         <br>
                         <div>{{ field }}</div>
                         <br>
