--- a/templates/base-nav.html
+++ b/templates/base-nav.html
@@ -22,14 +22,15 @@
     <link rel="stylesheet" href="{% static 'images/SlackBook-Logo.png' %}">
     <title>SlackBook</title>
 </head>
-<!--------------------------------- Body -->
+<!-- Body -->
 
 <body class="text-white bg-dark">
-    <!------------------------------- Header -->
+    <!-- Header -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
         <div class="row header no-gutters">
             <div class="col-md-4">
-                <a class="navbar-brand" href="/"><img class="brand" src="{% static 'images/SlackBook-Logo.png' %}" alt="logo"></a>
+                <a class="navbar-brand" href="/"><img class="brand" src="{% static 'images/SlackBook-Logo.png' %}"
+                        alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -54,32 +55,41 @@
                         </button>
                         <div class="dropdown-menu">
                             {% if user.is_authenticated %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-                            </li>
+                            <ul>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                                </li>
+                            </ul>
                             {% else %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'account_login' %}">Login</a>
-                            </li>
+                            <ul>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'account_signup' %}">Sign Up</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                                </li>
+                            </ul>
                             {% endif %}
+
                             <div class="dropdown-divider"></div>
                             {% if user.is_authenticated %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'user-settings' %}">Settings</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'account' request.user.id %}">My Account</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'recently-active' %}">Active Users</a>
-                            </li>
+                            <ul>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'user-settings' %}">Settings</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'account' request.user.id %}">My Account</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'recently-active' %}">Active Users</a>
+                                </li>
+                            </ul>
                             {% endif %}
-                            <li class="nav-item">
-                                <a class="nav-link" href="{% url 'topics' %}">Categories and Channels</a>
-                            </li>
+                            <ul>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="{% url 'topics' %}">Categories and Channels</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -87,37 +97,33 @@
         </div>
     </nav>
 
-    
-    <!-- -------------Content---------------- -->
+
+    <!-- Content -->
     <div class="base-conent">
         {% block content %}
 
         {% endblock %}
     </div>
-    <!-- -------------Footer---------------- -->
 
+    <!-- Footer -->
     <footer class="footer">
-            
+
         <a href="https://twitter.com/" target="_blank" rel="noopener"
-            aria-label="Visit our Twitter page (opens in a new tab)"><i id="twitter"
-                class="fab fa-twitter"></i></a>
-    
-       <a href="http://facebook.com" target="_blank" rel="noopener"
-            aria-label="Visit our Facebook page (opens in a new tab)"><i id="facebook"
-                class="fab fa-facebook"></i></a>
+            aria-label="Visit our Twitter page (opens in a new tab)"><i id="twitter" class="fab fa-twitter"></i></a>
+
+        <a href="http://facebook.com" target="_blank" rel="noopener"
+            aria-label="Visit our Facebook page (opens in a new tab)"><i id="facebook" class="fab fa-facebook"></i></a>
 
         <a href="http://youtube.com" target="_blank" rel="noopener"
-        aria-label="Visit our Youtube page (opens in a new tab)"><i id="youtube" 
-                class="fab fa-youtube"></i></a>
+            aria-label="Visit our Youtube page (opens in a new tab)"><i id="youtube" class="fab fa-youtube"></i></a>
 
         <a href="http://linkedin.com" target="_blank" rel="noopener"
-        aria-label="Visit our LinkedIn page (opens in a new tab)"><i id="linkedin" 
-                class="fab fa-linkedin"></i></a>
-    
+            aria-label="Visit our LinkedIn page (opens in a new tab)"><i id="linkedin" class="fab fa-linkedin"></i></a>
+
         <a href="http://instagram.com" target="_blank" rel="noopener"
             aria-label="Visit our Instagram page (opens in a new tab)"><i id="instagram"
                 class="fab fa-instagram"></i></a>
-               
+
         <p>Copyright © SlackBook 2023</p>
     </footer>
 
