--- a/slackbook_user/templates/base/chat.html
+++ b/slackbook_user/templates/base/chat.html
@@ -1,18 +1,23 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik+Iso&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Rubik+Iso&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'images/avatar.png' %}">
     <link rel="stylesheet" href="{% static 'images/SlackBook-Logo.png' %}">
@@ -20,69 +25,64 @@
 </head>
 
 <body class="text-white bg-dark">
-    
-
-      <div class="row">
+    <div class="row">
         <div class="col-md-6 offset-md-3">
             <div class="main-content">
                 <div class="channel-content">
-                {% if 'chat' in request.path %}
-                <a class="navbar-brand" href="/"><img class="brand" src="{% static 'images/SlackBook-Logo.png' %}" alt="logo"></a>
-                <label for="channel-description">Conversation with
-                    {% if request.user == chat.host %}
+                    {% if 'chat' in request.path %}
+                    <a class="navbar-brand" href="/"><img class="brand" src="{% static 'images/SlackBook-Logo.png' %}"
+                            alt="logo"></a>
+                    <label>Conversation with
+                        {% if request.user == chat.host %}
                         {{ chat.title }}
-                    {% else %}
-                        {{ chat.host.username }}
-                    {% endif %}:
-                </label>
-                <br>
-                connected since {{ chat.created_on|timesince }}
-                <hr>
-                {% endif %}
-                {% for post in posts %}
-                {% if post.chat %}
-                    <div>
-                        <small><a href="{% url 'account' request.user.id %}">@{{ post.user.username }}</a> - {{ post.created_on|timesince }} ago</small>
-                        {% if post.image %}
-                            <img class="post-image" src="{{ post.image.url }}" alt="post-image">
                         {% else %}
-                            <p class="question">{{ post.body }}</p>
+                        {{ chat.host.username }}
+                        {% endif %}:
+                    </label>
+                    <br>
+                    connected since {{ chat.created_on|timesince }}
+                    <hr>
+                    {% endif %}
+                    {% for post in posts %}
+                    {% if post.chat %}
+                    <!-- Past chat history -->
+                    <div>
+                        <small><a href="{% url 'account' request.user.id %}">@{{ post.user.username }}</a> -
+                            {{ post.created_on|timesince }} ago</small>
+                        {% if post.image %}
+                        <img class="post-image" src="{{ post.image.url }}" alt="post-image">
+                        {% else %}
+                        <p class="question">{{ post.body }}</p>
                         {% endif %}
                         {% if request.user == post.user%}
-                            <a href="{% url 'delete-comment' post.id %}"><button
-                                class="btn btn-outline-success button delete-post">X</button></a>
+                        <a class="btn btn-outline-success button delete-post" href="{% url 'delete-comment' post.id %}">X</a>
                         {% endif %}
-                        <hr>  
+                        <hr>
                     </div>
                     {% endif %}
-                {% endfor%}
-            
-    
-              {% if request.user.is_authenticated %}
-              <div class="post-form">
-                  <form action="" method="POST" enctype="multipart/form-data">
-                    {% csrf_token %}
+                    {% endfor%}
+
+                    <!-- new Comments -->
+                    {% if request.user.is_authenticated %}
+                    <div class="post-form">
+                        <form action="" method="POST" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            {% if 'chat' in request.path %}
+                            <input class="comment-field" type="text" placeholder="Place your meassage..." name="body">
+                            {% endif %}
+                            <button class="btn btn-outline-success button" type="submit">send message</button>
+                        </form>
+                    </div>
                     {% if 'chat' in request.path %}
-                    <input class="comment-field" type="text" placeholder="Place your meassage..." name="body">
-                    {% endif %}   
-                    <button class="btn btn-outline-success button" type="submit">send message</button>
-                    <!-- <input type="submit" value="Submit">  -->
-                  </form>
-              </div>
-              {% if 'chat' in request.path %}
-                <hr>
-              {% endif %} 
-    
-              {% endif %}
-            </div>
+                    <hr>
+                    {% endif %}
+
+                    {% endif %}
+                </div>
             </div>
         </div>
-      </div>
+    </div>
 
 </body>
+
 </html>
-
-
-
-
-
